system/vault/ressources/ingress.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: vault
  namespace: vault
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-staging
spec:
  virtualhost:
    fqdn: vault.mgmt.cedille.club
    tls:
      secretName: vault-tls
  routes:
  - conditions:
    - header:
        contains: application/grpc
        name: Content-Type
    services:
    - name: vault-ui
      port: 8200
      protocol: h2c
  - services:
    - name: vault-ui
      port: 8200
